Bug 512059 - Accessibility focus event never fired for designMode document after the first focus. r=surkov,MarcoZ a=blocking1.9.2